# damage_simulator

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: app.py  app_callback.py  app_layout.py
app/components/: buff_input.py  debuff_input.py  enemy_input.py  sidebar.py  simulation.py  skill_input.py  student_input.py
damage_simulator/: buffs.py  calc_damage.py  constants.py  enemy.py  equip.py  skill.py  students.py
damage_simulator/ui/: df_input.py  student_input.py
data/buff/: ハレアコキサキ.csv
data/debuff/: マキカンナ.csv
